# Desky

./: .gitignore  README.md  package.json  pnpm-lock.yaml  version.json  vite.config.ts
.github/workflows/: build-and-release.yml
arduino/: initr4.ino
public/: haarcascade_frontalface_default.xml
scripts/: update-version.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  logs.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  camera_controller.rs  commands.rs  device_manager.rs  face_detector.rs  head.rs  http_client.rs  logger.rs  main.rs  servo_controller.rs  socket_communication.rs
src/app/api/startVoiceChat/: route.ts
src/app/api/stopVoiceChat/: route.ts
src/components/: AudioPlayer.tsx  AudioRecorder.tsx  ByteDanceRecorder.tsx  ConfigPanel.tsx  DebugPanel.tsx  ErrorBoundary.tsx  HelpAndSupport.tsx  HelpPage.tsx  HistoryLog.tsx  ImageGenerator.tsx  InteractionInterface.tsx  LoadingOverlay.tsx  LogViewer.tsx  PermissionHandler.tsx  ProgressBar.tsx  SceneEditor.tsx  ScriptInput.tsx  ServoControls.tsx  SettingsPanel.tsx  SystemStatusCard.tsx  TestVideoFeed.tsx  VideoCreationTool.tsx  VideoFeed.tsx  VideoFeed1.tsx  VideoFeed2.tsx  VideoFeed3.tsx  VideoPreview.tsx  VoiceCloneDialog.tsx
src/components/VideoFeed/: CameraControls.tsx  CameraSelect.tsx  PermissionHandler.tsx  PermissionStatus.tsx  VideoDisplay.tsx  index.tsx
src/components/layout/: MainLayout.tsx  ProjectManager.tsx  Sidebar.tsx  Workspace.tsx
src/components/ui/: spinner.tsx  toaster.tsx
src/context/: AppContext.tsx  RobotContext.tsx
src/hooks/: useCamera.ts  useMidjourney.ts  useSerialPorts.ts  useToast.ts
src/lib/: bytedanceTts.ts  db.ts  messageQueueService.ts  openai.ts  phoneCommunication.ts  servoControl-node.ts  servoControl.ts  tts.ts  voiceRecognitionService.ts  voiceSettings.ts  webSocketService.ts
src/pages/: Help.tsx  Home.tsx  InteractionPage.tsx  Log.tsx  Projects.tsx  Settings.tsx  index.tsx
src/pages/api/: openai.ts
src/services/: FaceDetectionService.ts  FaceDetectionService1.ts  FaceDetectionService2.ts  FaceDetectionUtils.ts  VideoProcessor.ts
src/types/: camera.ts  faceDetection.ts  websocket.ts
src/utils/: api.ts  cameraUtils.ts  logger.ts  permissionUtils.ts  videoUtils.ts
tests/: test-r4.js
workflows/: build-and-release.yml
