[package]
name = "Desky"
version = "0.5.0"
description = "A Tauri App for Desktop Chat Bot"
authors = ["youtube@iaiuse.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
pkg-config = "0.3"

[dependencies]
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
tauri = { version = "1.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
serialport = "4.2.0"
image = "0.23.14"
rustface = "0.1.5"
gstreamer = "0.19.2"
gstreamer-video = "0.19.2"
gstreamer-app = "0.19.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[package.metadata.pkg-config]
opencv4 = "4.0"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "a42af01"

[package.metadata.vcpkg.target]
x86_64-apple-darwin = { triplet = "x64-osx" }
