[package]
name = "Desky"
version = "0.5.0"
description = "A Tauri App for Desktop Chat Bot"
authors = ["youtube@iaiuse.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
pkg-config = "0.3"

[dependencies]
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
tauri = { version = "1.0", features = [ "http-request", "fs-create-dir", "fs-read-file", "fs-read-dir", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
serialport = "4.2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

